# nannou-study

./: Cargo.toml
src/: fire.rs  fluid.rs  main.rs  slime.rs  template_app.rs
src/ants/: ant.rs  ants.rs
src/auto/: boid.rs  main.rs
src/circles/: main.rs
src/collatz/: main.rs
src/csb/: main.rs
src/exo/: main.rs
src/schotter/: main.rs
src/sin/: main.rs
src/worley/: main.rs
