[package]
name = "doom-fire"
version = "0.1.0"
authors = ["Jairo <jairoandre@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.16"

[[example]]
name = "fire"
path = "src/fire.rs"

[[example]]
name = "fluid"
path = "src/fluid.rs"

[[example]]
name = "slime"
path = "src/slime.rs"

[[example]]
name = "ants"
path = "src/ants/ants.rs"

[[example]]
name = "csb"
path = "src/csb/main.rs"